# research

./: .gitignore  .gitmodules  LICENSE  README.md  p2p-data-sync-comparison.md  sync.py  test.py
.github/: labels.yml
Tor-vs-Waku/: Anonymous-Transport.md  Tor-vs-Waku.md  WAKU2-Relay-Privacy.md
archive/: README.md  p2p-data-sync-comparison.md
circom-tests/: README.md  create  pot
circom-tests/ark-circom/poseidon/: Cargo.toml
circom-tests/ark-circom/poseidon/circuit/: poseidon.r1cs  poseidon.wasm
circom-tests/ark-circom/poseidon/inputs/: input.json
circom-tests/ark-circom/poseidon/src/: main.rs
data_sync/: Makefile  README.md  app.py  filter.py  networksim.py  networkwhisper.py  private_client.py  static-nodes.json  sync.py  sync_pb2.py  test.json  whisper.py  whisper2.py
discv5/: README.md  discv5  discv5.nimble  notebook.ipynb
hello-pss/: README.md  alice.key  hello_pss.go  notes.md
hello_gossipsub/: Makefile  README.md  hello_gossipsub.nimble
merkleslash/: README.md  merkleslash.go  merkleslash_test.go
noise-research/: secure-transfer.md
reinforced-concrete/: README.md
remote_log/: Makefile  README.md  client.nim  ipfs-feasability.md  node.nim  ns.nim  remote-log.msc  remote_log_spec.md  server.nim
rln-research/: 2022-07-22-rln-relay-journey.md  membership-merkle-tree-storage-evaluation.md  merkle-tree-update.md  rln-model.md
vac/: vac-comm.md
waku2-vs-waku1/: waku2-vs-waku1.md
waku_scalability/: assumptions.py  batch.json  batch1.json  cases.py  config.json  requirements.txt  status.json  utils.py  waku_scaling.md  waku_scaling.py
(+151 files in other folders)
