[package]
name = "poseidon"
version = "0.1.0"
edition = "2021"

[dependencies]

num-bigint = { version = "0.4", default-features = false, features = ["rand"] }

# ZKP Generation
ark-ec = { version = "0.3.0", default-features = false, features = ["parallel"] }
ark-std = { version = "0.3.0", default-features = false, features = ["parallel"] }
ark-bn254 = { version = "0.3.0" }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", rev = "765817f", features = ["parallel"] }
ark-relations = { version = "0.3.0", default-features = false, features = [ "std" ] }
ark-serialize = { version = "0.3.0", default-features = false }

ark-circom = { git = "https://github.com/gakonst/ark-circom", features = ["circom-2"] }

# error handling
color-eyre = "0.5"

# decoding of data

# tracing
tracing = "0.1"
tracing-subscriber = "0.2"

# json
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
serde_json = "1.0.48"
